[workspace]
members = ["obj", "rl_input"]

[package]
name = "ea-rs-3"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"
rl_input = { path = "rl_input" }
# obj = { path = "obj" }
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_derive = "1.0.228"
toml = { version = "0.9.7", features = ["fast_hash"] }

[features]
dbg_order_algorithm = []
